# oh-my-agent-cluster

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: omac-cli-design.md  omac-v2-cloud-native-business-solution-design.md  smoke-test-plan.md
docs/diagrams/: omac-architecture.drawio  omac-execution-flow.drawio
docs/launch/: README.md  chinese-communities.zh-CN.md  faq.md  github-discussions.md  multica.md  product-hunt.md  show-hn.md
docs/launch/metrics/: 2026-07-16-prelaunch.json  2026-07-17-github-launch.json  README.md
docs/releases/: 1.0.0.md
docs/superpowers/plans/: 2026-07-11-flexible-scope-paths.md  2026-07-11-manifest-integrity-and-final-acceptance.md  2026-07-11-unified-authoring-task-context.md
docs/superpowers/specs/: 2026-07-11-flexible-scope-paths-design.md  2026-07-13-omac-v2-cloud-native-business-solution-design.md  2026-07-14-project-rules-delivery-design.md  2026-07-19-strict-agent-quality-gates-design.md
docs/zh-CN/: omac-cli-design.md
scripts/: check_release.py  collect_launch_metrics.py  install.sh
skills/parallel-dev-orchestration/: .env.example  SKILL.md
skills/parallel-dev-orchestration/scripts/: run_dag.py
src/omac/: i18n.py
tests/: test_agent_templates.py  test_cli.py  test_cli_dag.py  test_cli_node.py  test_cli_plan.py  test_cli_work.py  test_collect_launch_metrics.py  test_delivery_acceptance.py  test_delivery_ci.py  test_delivery_merge.py  test_dispatch.py  test_e2e_p1.py  test_e2e_p4_delivery.py  test_engines_mock.py  test_engines_multica.py  test_events_tick.py  test_evidence.py  test_gitsync.py  test_guide.py  test_increment.py  test_init.py  test_lint.py  test_live_p2.py  test_loop.py  test_manifest.py  test_project_rules.py  test_release_check.py  test_retry_config.py  test_taskmeta.py  test_tasks.py  test_web_static.py
tests/fixtures/: smoke_p1.yaml
(+142 files in other folders)
