[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-my-multica"
version = "1.0.0"
description = "Production-grade software delivery control for coding-agent teams on Multica"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "oh-my-multica contributors" }]
requires-python = ">=3.10"
keywords = [
    "ai-agents",
    "coding-agents",
    "harness-engineering",
    "loop-engineering",
    "multi-agent",
    "multica",
    "software-delivery",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "PyYAML>=6.0",
    "structlog>=24",
]

[project.urls]
Homepage = "https://github.com/xiaohei-info/oh-my-multica"
Documentation = "https://github.com/xiaohei-info/oh-my-multica#readme"
Source = "https://github.com/xiaohei-info/oh-my-multica"
Issues = "https://github.com/xiaohei-info/oh-my-multica/issues"
Changelog = "https://github.com/xiaohei-info/oh-my-multica/blob/main/CHANGELOG.md"

[project.scripts]
omac = "omac.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"omac.guide" = ["*.md", "roles/*.md", "artifacts/*.md", "en/*.md", "en/roles/*.md", "en/artifacts/*.md"]
"omac.web.static" = ["*"]
"omac" = ["agents/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "live: tests that hit a real platform (Multica/GitHub). Skipped by default in CI; run locally with `-m live`.",
    "e2e: CLI 子进程级端到端验收(mock 引擎)。稳定回归护栏,无 sleep 竞态(mock delay=0)。",
]
